--- a/digi.html
+++ b/digi.html
@@ -76,7 +76,7 @@ body{
 	</style>
 </head>
 <body>
-<img src="dashtrack.png">
+<img src="dashtrack.png" alt="Hello">
 	<div id="clock">
 		<h1>THE TIME IS NOW</h1>
 		<div id='time'>
