--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,7 +27,9 @@ html {
   color: #ffffff;
   padding: 15px;
 }
-
+.header img{
+  border-radius:20px 20px;
+}
 .menu ul {
   list-style-type: none;
   margin: 0;
@@ -64,10 +66,10 @@ html {
 </style>
 </head>
 <body>
-<img src="logi jpg">
 
 <div class="header">
-  <h1>Chania</h1>
+  <h1>CHETHAN T B</h1>
+  <img src="logo.jpg">
 </div>
 
 <div class="row">
