--- a/Portfolio.html
+++ b/Portfolio.html
@@ -68,8 +68,8 @@ html {
 <body>
 
 <div class="header">
-  <h1>CHETHAN T B</h1>
-  <img src="logo.jpg">
+  <div class="col-6"><h1>CHETHAN T B</h1></div>
+  <div class="col-6"><img src="logo.jpg"></div>
 </div>
 
 <div class="row">
