--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
 			<p>A keen learner and a fresher based in Bengaluru.Persuing a Bachelors degree in Electronics and Communications Engineering and have a proficient knowledge over software and IOT development. </p>
 		</div>
 		<div class="col-2 image">
-			<img src="new.jpg">
+			<img src="new1.jpg">
 		</div>
 		
 		<div class='col-3 skills'>
