--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
 	    </div>
 	    <div>
 		<ol>
-			<li><h4>Aotumated attendance System</h4>
+			<li><h4>Automated attendance System</h4>
 			<p>This System consisted <b>AI</b> technology to recognize face, <b>RFID</b> cards identity and the respective data was stored in a <b>SQL</b> database.Those data were made monitored by anyone by means of website.And everything was implementeed on <b>Raspberry Pi</b> board which uses Raspian OS which is one of the <b>Linux</b> distributions. </p>
 			<h5>My Role,</h5>
 			<ul><b>
