--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
 		
 		<div class="col-1 about">
 			<h4>I'm Chethan T B,</h4>
-			<p>A keen learner and a fresher based in Bengaluru.Persuing a Bachelors degree in Electronics and Communications Engineering and have a proficient knowledge over software and IOT development. </p>
+			<p>A keen learner and a fresher based in Bengaluru.Pursuing a Bachelors degree in Electronics and Communications Engineering and have a proficient knowledge over software and IOT development. </p>
 		</div>
 		<div class="col-2 image">
 			<img src="new6.jpg">
