--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,8 @@
 		<div class='col-3 skills'>
 			<h3>KEYSKILLS</h3>
 			<ul>
-				<li>C and C++</li>
+				<li>C++</li>
+                                <li>Java</li>
 				<li>Python</li>
 				<li>Data Structures and Algorithms</li>
 				<li>Embedded Software</li>
