--- a/portfolio.html
+++ b/portfolio.html
@@ -99,8 +99,8 @@
 	<div class="row">
 		
 		<div class="col-1 about">
-			<h4>I'm Chethan T B,</h4>
-			<p>A keen learner and a fresher based in Bengaluru.Pursuing a Bachelors degree in Electronics and Communications Engineering and have a proficient knowledge over software and IOT development. </p>
+			<h4><b>I'm Chethan T B,</b></h4>
+			<p>Application Engineer @ Premier Measurement Solutions Pvt. Ltd.</p>
 		</div>
 		<div class="col-2 image">
 			<img src="new6.jpg">
@@ -109,12 +109,12 @@
 		<div class='col-3 skills'>
 			<h3>KEYSKILLS</h3>
 			<ul>
-				<li>C++</li>
-                                <li>Java</li>
+				<li>C</li>
+                                <li>C++</li>
 				<li>Python</li>
-				<li>Data Structures and Algorithms</li>
-				<li>Embedded Software</li>
-				<li>HTML,CSS,JS</li>
+				<li>Digital Communication and Networking</li>
+				<li>Wireless Embedded Development</li>
+				<li>Web Technologies</li>
 
 			</ul>
 			
