--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
 		
 		<div class="col-1 about">
 			<h4><b>I'm Chethan T B,</b></h4>
-			<p>Application Engineer @ Premier Measurement Solutions Pvt. Ltd.</p>
+			<p>Fresher having a zeal to learn new technologies and constantly seeking oppertunities</p>
 		</div>
 		<div class="col-2 image">
 			<img src="new6.jpg">
@@ -109,12 +109,12 @@
 		<div class='col-3 skills'>
 			<h3>KEYSKILLS</h3>
 			<ul>
-				<li>C</li>
-                                <li>C++</li>
 				<li>Python</li>
-				<li>Digital Communication and Networking</li>
-				<li>Wireless Embedded Development</li>
+                                <li>C++</li>
+				<li>Linux Internals</li>
 				<li>Web Technologies</li>
+				<li>Data Science</li>
+				
 
 			</ul>
 			
@@ -131,7 +131,7 @@
 			<h5>My Role,</h5>
 			<ul><b>
 			<li>Embedded Software Developer </li>
-			<li>Circuit Designer</li>
+			<li>ML system designer</li>
 			<li>Web developer</li></b>
 			</ul>
 			</li>
