--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,12 @@
      
     }
     body{
-    	background: #ebebe7;
+    	background: #000;
     	color: #fff;
     }
     h1{
     	text-align:center;
-    	background:#333333;
+    	background:#01f9c6;
     	padding: 10px 10px;
     }
     .image img{
