--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
      
     }
     body{
-    	background: #000;
-    	color: #fff;
+    	background: #fff;
+    	color: #000;
     }
     h1{
     	text-align:center;
@@ -27,7 +27,7 @@
     }
     .about{
     	height: auto;
-    	background:#333333;
+    	background:#fbdb14;
     }
     .skills{
     	text-align: center;
