--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
      
     }
     body{
-    	background: #fff;
-    	color: #000;
+    	background: #000;
+    	color: #fff;
     }
     h1{
     	text-align:center;
