--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     .skills{
     	text-align: center;
     	height: auto;
-    	background: #333333;
+    	background: #ff2047;
     }
     .skills ul{
     	list-style-type: none;
@@ -40,11 +40,11 @@
     	padding:0;
     }
     .skills li{
-    	background: #fff;
+    	background: #fbdb14;
     	margin-bottom: 8px;
     	padding:8px;
     	text-align: center;
-    	color: #333;
+    	color: #fff;
     }
     .skills li:hover{
     	background:#000;
