--- a/portfolio.html
+++ b/portfolio.html
@@ -73,10 +73,10 @@
     .col-1{width:25%;height: 400px;}
     .col-2{width:50%;height: 400px;}
 	.col-3{width:25%;height: 400px;}
-	.col-4{width:33%;background: #333333; }
-	.col-5{width:33%;background: #333333;}
-	.col-6{width:33%;background:#333333;}
-	.col-8{width:100%;background: #333333;
+	.col-4{width:33%; }
+	.col-5{width:33%;}
+	.col-6{width:33%;}
+	.col-8{width:100%;
 	margin-top: 10px;}
 	.footer{
 		text-align: center;
