--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
      
     }
     body{
-    	background: #000;
-    	color: #fff;
+    	background: #fff;
+    	color: #000;
     }
     h1{
     	text-align:center;
@@ -47,8 +47,8 @@
     	color: #fff;
     }
     .skills li:hover{
-    	background:#000;
-    	color:#fff;
+    	background:#fff;
+    	color:#000;
     }
     .work{
     	margin-top: 10px;
