--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
      
     }
     body{
-    	background: #01f9c6;
+    	background: #000;
     	color: #fff;
     }
     h1{
@@ -52,6 +52,7 @@
     }
     .work{
     	margin-top: 10px;
+        background:#01f9c6;
     }
     
     [class*="col-"]{
