--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
 	.col-4{width:33%; }
 	.col-5{width:33%;}
 	.col-6{width:33%;}
-	.col-8{width:100%;
+	.col-8{width:100%;background:#01f9c6;
 	margin-top: 10px;}
 	.footer{
 		text-align: center;
