--- a/portfolio.html
+++ b/portfolio.html
@@ -11,8 +11,8 @@
      
     }
     body{
-    	background: #000;
-    	color: #fff;
+    	background: #fff;
+    	color: #000;
     }
     h1{
     	text-align:center;
@@ -82,7 +82,7 @@
 	.footer{
 		text-align: center;
 		padding: 5px;
-		margin:10px 10px;
+		margin:10px 10px;background: #ff2047;
 	}	
 	@media only screen and (max-width: 600px)
 	{
