--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,7 @@
 			<p>Fresher having a zeal to learn new technologies and constantly seeking oppertunities</p>
 		</div>
 		<div class="col-2 image">
-			<img src="IMG_20211106_163228_669.jpg">
+			<img src="IMG_20220224_094737.jpg">
 		</div>
 		
 		<div class='col-3 skills'>
