--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
         display: table;
     }
     a{
-    	color: #fff;
+    	color: #000;
     	text-decoration: none;
     }
     .col-1{width:25%;height: 400px;}
