--- a/happy.html
+++ b/happy.html
@@ -6,7 +6,7 @@
         body {
             font-family:'Wendy One', sans-serif;
             background-image: url("paaru.jpeg");
-           
+            background-repeat : no-repeat;
             width: 100%;
             
         }
